@@ -760,6 +760,7 @@ comment from another wiki.
 * (bug 22540) ForeignApiRepos no longer try to store thumbnails that don't exist
 * (bug 22551) Special:Resetpass now has a "Cancel" button that sends the user to 
   the page set in the &returnto parameter.
+* (bug 19194) Search box in Modern skin doesn't focus with Safari/Chrome
 
 == API changes in 1.16 ==
 
